After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763895 - Incorrect gir annotation on gst_element_query_convert
Incorrect gir annotation on gst_element_query_convert
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other Linux
: Normal normal
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-03-18 20:05 UTC by Ben
Modified: 2016-04-14 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (831 bytes, patch)
2016-03-18 20:05 UTC, Ben
committed Details | Review

Description Ben 2016-03-18 20:05:22 UTC
Created attachment 324302 [details] [review]
patch

GstFormat is an enum, so it does not make sense to be (inout)
Comment 1 Tim-Philipp Müller 2016-03-18 20:41:12 UTC
Makes sense, thanks for the patch!

commit 53f2fb93e859daa4cee3c000756d47c1d14d2102
Author: Ben Iofel <iofelben@gmail.com>
Date:   Fri Mar 18 16:02:43 2016 -0400

    utils: fix gir annotation for gst_element_query_convert()
    
    https://bugzilla.gnome.org/show_bug.cgi?id=763895