utils: fix gir annotation for gst_element_query_convert()

https://bugzilla.gnome.org/show_bug.cgi?id=763895